[package]
name = "mqtt-recorder"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Record and replay MQTT messages"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "mqtt_recorder"
path = "src/lib.rs"

[[bin]]
name = "mqtt-recorder"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# MQTT client and broker
rumqttc = "0.24"
rumqttd = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV handling
csv = "1"

# Base64 encoding/decoding
base64 = "0.22"

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
# Property-based testing
proptest = "1"
tempfile = "3"

[[test]]
name = "cli_props"
path = "tests/property/cli_props.rs"

[[test]]
name = "topics_props"
path = "tests/property/topics_props.rs"

[[test]]
name = "csv_props"
path = "tests/property/csv_props.rs"

[[test]]
name = "csv_validation_props"
path = "tests/property/csv_validation_props.rs"
