[package]
name = "mqtt-recorder"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Record and replay MQTT messages"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "mqtt_recorder"
path = "src/lib.rs"

[[bin]]
name = "mqtt-recorder"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# MQTT client and broker
rumqttc = "0.24"
rumqttd = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV handling
csv = "1"

# Base64 encoding/decoding
base64 = "0.22"

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
# Property-based testing
proptest = "1"
tempfile = "3"

[[test]]
name = "cli_props"
path = "tests/property/cli_props.rs"

[[test]]
name = "topics_props"
path = "tests/property/topics_props.rs"

[[test]]
name = "csv_props"
path = "tests/property/csv_props.rs"

[[test]]
name = "csv_validation_props"
path = "tests/property/csv_validation_props.rs"

[[test]]
name = "tui_props"
path = "tests/property/tui_props.rs"

[[test]]
name = "broker_metrics_props"
path = "tests/property/broker_metrics_props.rs"


[[test]]
name = "mirror_test"
path = "tests/integration/mirror_test.rs"

[[test]]
name = "recorder_test"
path = "tests/integration/recorder_test.rs"

[[test]]
name = "replayer_test"
path = "tests/integration/replayer_test.rs"

[[test]]
name = "verify_test"
path = "tests/integration/verify_test.rs"
